# lloegrys_src

./: .dockerignore  .gitignore  .gitignore copy  CLAUDE.md  CMakeLists.txt  Dockerfile.copy  Dockerfile.lloegrys  Dockerfile.new  LOGGING.md  README.md  entrypoint.sh  watchdog.py
.github/workflows/: build-debug.yml  build-release.yml  linux-debug-binary.yml  linux-release-binary.yml  release.yml
docs/: index.md  interacoes-uses-elements.md  modularizacao-sistemas.md  roadmap.md
docs/reference/: Classes and Masteries.lua  First Ascent.lua  Functions.lua  Item List.lua  Monsters.lua  NPCs.lua  Spell List.lua  Storage List.lua  Taskboard.lua  global.lua  new to do.lua
src/: CMakeLists.txt  configmanager.cpp  configmanager.h  connection.cpp  crash_handler.cpp  crash_handler.h  database.cpp  dbutils.h  definitions.h  depotchest.cpp  depotlocker.cpp  iologindata.cpp  iomapserialize.cpp  item.cpp  lloegrys_attributes.cpp  lloegrys_attributes.h  logger.cpp  logger.h  luascript.cpp  luascript.h  otserv.cpp  outputmessage.cpp  player.cpp  player.h  protocolgame.cpp  spell_cooldown_manager.cpp  spell_cooldown_manager.h  tools.cpp  weapons.cpp
